# algo

./: .AUTH_IMPLEMENTATION_VERIFICATION.md  .bandit  .consolidation_plan.md  .env.development  .env.example  .env.local  .env.local.cognito.example  .env.local.example  .env.production  .env.staging  .env.template  .env.test  .env.vault.template  .flake8  .gitattributes  .gitignore  .loader-progress.json  .loader_lock  .mcp.json  .parallel_chunk_0.txt  .parallel_chunk_1.txt  .pre-commit-config.yaml  .prettierrc  .secrets.baseline  .trigger-deploy  0_create_oidc_and_role.txt  6_STEPS_TO_LIVE_TRADING.md  ACTION_CHECKLIST.md  ACTION_DASHBOARD.md  ACTION_PLAN.md  ACTION_PLAN_DATA_RELOAD_AND_OPTIMIZATION.md  ACTION_PLAN_MAY24.md  ACTION_PLAN_PRIORITIZED_2026_05_10.md  ACTION_PLAN_PRODUCTION_READINESS.md  ACTION_REQUIRED.md  ACTION_SUMMARY_COMPLETE.md  ACTION_SUMMARY_FEB26.txt  ACTIVE_MONITORING_CHECKLIST.md  ACTUAL_DB_SCHEMA.md  ACTUAL_DEPLOYMENT_FLOW.md  (+3534 more)
.audit/: WIRING_AUDIT.md
.backup_old_schemas/: init_database.py.backup.1777128709  init_schema.py.backup.1777128709
.claude/: AUDIT_FINDINGS.md  CLEANUP_CHECKLIST.md  COMPLETE_STATUS_REPORT.md  CRITICAL_FINDINGS.md  DETAILED_WORK_BREAKDOWN.md  DIAGNOSIS_FINDINGS.md  DOCUMENTATION_SYSTEM.md  FIX_PLAN.md  IMPLEMENTATION_PLAN.md  MASTER_ISSUES_LIST.md  MASTER_PRODUCTION_CHECKLIST.md  MASTER_PRODUCTION_ROADMAP.md  REMAINING_ISSUES.md  SECURITY_AUDIT_3_2.md  SECURITY_AUDIT_COMPREHENSIVE.md  SESSION_65_SUMMARY.md  STEERING_MEMORY_MAINTENANCE.md  VERIFICATION_REPORT_FINAL.md  cost-tracker.json  mcp.json  settings.json  settings.local.json
.docs_archive/: .gitignore  ACTUAL_STATE.md  ADVANCED_INNOVATION_LOADERS.md  ALGO_ARCHITECTURE.md  ALGO_DEPLOYMENT.md  ALPACA_CREDENTIALS_SETUP.md  ANNUAL_MODEL_REVIEW.md  API_ENDPOINTS_REFERENCE.md  API_PERFORMANCE_GUIDE.md  API_REFERENCE.md  API_STANDARDIZATION_FIX.md  ARCHITECTURE.md  ARCHITECTURE_ALTERNATIVES.md  ARCHITECTURE_AND_IAC_GUIDE.md  ARCHITECTURE_BREAKDOWN.md  ARCHITECTURE_DECISION.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_FINAL.md  ARCHITECTURE_STATUS.md  AUDIT_PROGRESS_UPDATE.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  AUTH_SYSTEM_COMPLETE_VALIDATION_FINAL.md  AUTH_SYSTEM_FINAL_AUDIT_REPORT.md  AUTH_SYSTEM_QUICK_REFERENCE.md  AUTH_SYSTEM_SCENARIO_TESTING.md  AWS_BEST_PRACTICES.md  AWS_BUDGET_SETUP.md  AWS_DATA_LOADING_STATUS.md  AWS_DATA_SYNC_PLAN.md  AWS_DEPLOYMENT_GUIDE.md  AWS_DEPLOYMENT_READY_2026.md  AWS_DEPLOYMENT_VERIFICATION.md  AWS_DEPLOYMENT_VERIFIED.md  AWS_ISSUES_AND_FIXES.md  AWS_OPERATIONS_GUIDE.md  AWS_OPTIMIZATION_PLAN.md  AWS_OPTIMIZED_LOADING_DESIGN.md  AWS_SERVICES_OPTIMIZATION.md  AWS_STRATEGY_REVIEW.md  (+252 more)
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.github/: BATCH5_EXECUTION_SUMMARY.md  BATCH5_FINAL_VERIFICATION.md  BATCH5_OPTIMIZATION_REVIEW.md  BATCH5_QUICK_DIAGNOSTIC.md  BATCH5_STATUS_REPORT.md  COMPLETE_DATA_STATUS.md  DEPLOYMENT_NOTES.txt  FORCE_WORKFLOW_TRIGGER.txt  GITHUB_SECRETS_SETUP.md  LOG_ANALYSIS_GUIDE.md  STATUS_CHECK_GUIDE.md  WORKFLOWS.md  dependabot.yml  trigger.txt
.pre-commit-scripts/: check-credential-defaults.py  check-critical-get-patterns.py  check-dashboard-get-pattern.py  check-financial-data-integrity.py  (+8 more)
hft-system/: .env.example  CMakeLists.txt  DESIGN.md  Dockerfile  HFT_BUDGET_ALPHA_BLUEPRINT.md  HFT_SYSTEM_BLUEPRINT.md  HFT_SYSTEM_BLUEPRINT_DETAILED.md  HFT_TESTING_BLUEPRINT.md  README.md  README_HFT_SYSTEM.md  docker-compose.yml  package.json  tsconfig.json
hft-system/config/: aws_infrastructure.yaml  system_config.yaml
hft-system/deployment/: cloudformation-hft-complete.yml  cloudformation-hft-infrastructure.yml  deploy-hft-system.sh
hft-system/scripts/: deploy.sh
hft-system/src/: config.ts  main-hft.ts  main.ts  test-hft-core.ts  types.ts
hft-system/src/adapters/: live-market-data-adapter.ts
hft-system/src/config/: index.ts
hft-system/src/core/: dpdk_network_engine.cpp  dpdk_network_engine.h  market_data_handler_aws.cpp  trading_engine_aws.cpp
hft-system/src/core/signals/: fast-signal-generator.ts
hft-system/src/core/timeseries/: timeseries-engine.ts
hft-system/src/data/: high_performance_order_book.cpp  high_performance_order_book.h  market_data_feed.cpp  market_data_pipeline.py  timestream_client.cpp
hft-system/src/engines/alpha/: alpha-research-engine.ts
hft-system/src/engines/execution/: critical-execution-engine.ts  execution-engine.ts
hft-system/src/engines/market-data/: market-data-engine.ts
hft-system/src/engines/order/: order-engine.ts
hft-system/src/engines/portfolio/: portfolio-engine.ts
hft-system/src/engines/risk/: risk-engine.ts
hft-system/src/engines/signal/: signal-engine.ts
hft-system/src/execution/: execution_engine.cpp  market_impact_engine.cpp  order_management_system.cpp  smart_order_router.cpp
hft-system/src/fpga/: fpga_interface.cpp  fpga_interface.h  fpga_risk_engine.cpp  fpga_risk_engine.h  risk_kernels.cl
hft-system/src/ml/: alpha_engine.cpp  alpha_engine.h
hft-system/src/risk/: realtime_risk_analytics.cpp  risk_manager_aws.cpp
hft-system/src/services/analytics/: analytics-service.ts
hft-system/src/services/compliance/: compliance-service.ts
hft-system/src/services/data-integration/: data-integration-service.ts
hft-system/src/services/health/: health-service.ts
hft-system/src/strategies/: advanced-scalping-strategy.ts  alpha_engine.py  base_strategy.h  market-making-strategy.ts  market_making_strategy.cpp  mean_reversion_strategy.cpp  momentum_strategy.cpp  scalping-strategy.ts  scalping_strategy.cpp  strategy_factory.cpp  strategy_manager.cpp  strategy_template.cpp
hft-system/src/testing/: integration_test_suite.cpp  latency_benchmark.cpp  latency_benchmark.h  unit_test_framework.cpp
hft-system/src/types/: index.ts
hft-system/src/utils/: aws_monitoring.cpp  circular-buffer.ts  high-res-timer.ts  lock_free_queue.h  logger.ts  memory_pool.h  metrics-collector.ts  numa_memory_manager.cpp  numa_memory_manager.h  performance-monitor.ts  performance_utils.h
hft-system/tests/: integration_test.cpp  strategy_backtest.cpp
(+8224 files in other folders)
