[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo"
version = "0.1.0"
description = "Stock Analytics Platform"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary==2.9.9",
    "yfinance==1.4.1",
    "requests==2.33.0",
    "pandas==2.1.4",
    "scipy==1.13.0",
    "boto3==1.34.0",
    "Flask==3.1.3",
    "Flask-CORS==6.0.0",
    "Werkzeug==3.1.6",
    "urllib3==2.7.0",
    "xlrd==2.0.1",
    "openpyxl==3.1.0",
    "rich==13.9.4",
]

[tool.setuptools]
packages = [
    "algo",
    "utils",
    "migrations",
    "loaders",
    "monitoring",
    "dashboard",
    "config",
]

[tool.setuptools.package-data]
algo = ["*.py"]
utils = ["*.py"]
loaders = ["*.py"]
monitoring = ["*.py"]
migrations = ["*.py", "versions/*.py"]
dashboard = ["*.py", "**/*.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
exclude = [
    "^migrations/",
    "^tests/",
    ".*-[a-z].*",
    "^.claude",
]

[[tool.mypy.overrides]]
module = [
    "utils.loaders.helpers",
    "utils.decorators",
]
ignore_errors = true  # Unix-only signals (SIGALRM) — not available on Windows

[[tool.mypy.overrides]]
module = [
    "dashboard.dashboard",
]
warn_unused_ignores = false  # msvcrt is Windows-only; try/except ImportError block makes ignores platform-dependent

[[tool.mypy.overrides]]
module = [
    "utils.infrastructure.timeout",
]
ignore_errors = true  # Uses contextlib generics that require architectural rework

[[tool.mypy.overrides]]
module = [
    "dashboard.fetchers_config",
    "dashboard.fetchers_market",
    "dashboard.fetchers_portfolio",
    "dashboard.fetchers_signals",
    "dashboard.fetchers_external",
    "dashboard.fetchers_common",
]
disallow_untyped_defs = true  # Fetchers must be annotated — unannotated defs hide type errors from API data

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "C90", "UP", "B", "C4", "PIE", "T10", "LOG", "RUF", "A"]
ignore = ["E203", "E501", "UP031", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"migrations/*" = ["E402", "F401"]
"tests/*" = ["E402", "F401", "S101"]
# Auto-generated/vendored files
"fix_casts_v2.py" = ["T201", "F401"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.isort]
known-first-party = ["algo", "utils", "loaders", "lambda", "config", "dashboard", "monitoring"]
known-third-party = ["numpy", "pandas", "scipy", "boto3", "flask", "requests", "psycopg2"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
    "line-too-long",
    "missing-docstring",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "too-many-branches",
    "duplicate-code",
    "too-few-public-methods",
    "inconsistent-return-statements",
    "fixme",
    "assignment-from-no-return",
    "raising-bad-type",
    "no-member",
    "import-error",  # False positives: setup_imports modifies sys.path at runtime
    "no-name-in-module",  # False positives: setup_imports modifies sys.path at runtime
    "assignment-from-none",  # Incorrect annotations or false positives from runtime path setup
]

[tool.pylint.variables]
ignored-argument-names = "_.*|^dummy_.*|^test_.*"

[tool.pylint.design]
max-attributes = 10
max-locals = 20

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--tb=short -v"
minversion = "7.0"
markers = [
    "unit: mark test as a unit test",
    "edge: mark test as an edge case test",
    "integration: mark test as an integration test",
]

[tool.coverage.run]
source = ["algo", "utils", "loaders", "lambda", "dashboard"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
precision = 2
skip_covered = false
skip_empty = true
sort = "cover"

[tool.coverage.html]
directory = "htmlcov"
