[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo"
version = "0.1.0"
description = "Stock Analytics Platform"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary==2.9.9",
    "yfinance==1.4.1",
    "requests==2.33.0",
    "pandas==2.1.4",
    "scipy==1.13.0",
    "boto3==1.34.0",
    "Flask==3.1.3",
    "Flask-CORS==6.0.0",
    "Werkzeug==3.1.6",
    "urllib3==2.7.0",
    "xlrd==2.0.1",
    "openpyxl==3.1.0",
    "rich==13.9.4",
]

[tool.setuptools]
packages = [
    "algo",
    "utils",
    "lambda",
    "migrations",
    "loaders",
    "monitoring",
    "dashboard",
    "config",
]

[tool.setuptools.package-data]
algo = ["*.py"]
utils = ["*.py"]
loaders = ["*.py"]
monitoring = ["*.py"]
migrations = ["*.py", "versions/*.py"]
dashboard = ["*.py", "**/*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
disallow_untyped_decorators = true
exclude = [
    "^migrations/",
    "^tests/",
    "^lambda/",
]

[[tool.mypy.overrides]]
module = "dashboard.panels.*"
disallow_untyped_decorators = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "C90", "UP", "B", "C4", "PIE", "T10", "LOG", "RUF", "A"]
ignore = ["E203", "E501", "UP031", "RUF012"]

[tool.ruff.lint.per-file-ignores]
# Per-file ignores MUST be specific (no wildcards).
# F401 (unused import) is NEVER allowed — use if TYPE_CHECKING blocks instead.
# E402 (imports not at top) only allowed in scripts that require setup before imports.
# C901 (complexity) should use inline # noqa — never file-wide.

"__init__.py" = ["F401"]  # Legitimate: __init__ may re-export unused imports for public API
"utils/exceptions/core.py" = ["N818", "A001"]  # N818: exception naming, A001: argument naming (shadowing builtins)
"utils/exceptions/__init__.py" = ["A001"]  # A001: argument naming
"migrations/versions/*" = ["E402", "F401"]  # Migrations: imports after schema setup
"tests/*" = ["E402", "F401", "S101"]  # Tests: setup code, unused fixtures, assertions
"conftest.py" = ["E402"]  # Pytest config: setup before imports

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.isort]
known-first-party = ["algo", "utils", "loaders", "lambda", "config", "dashboard", "monitoring"]
known-third-party = ["numpy", "pandas", "scipy", "boto3", "flask", "requests", "psycopg2"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
    # Disabled because Ruff handles line-length better with auto-fix capability.
    "line-too-long",
    # Disabled: not required by this project.
    "missing-docstring",
    # Disabled: informational only, not a real error. Prefer code review for design decisions.
    "fixme",
    # Disabled: too noisy. Use inline # pylint: disable=no-member for specific cases.
    "no-member",
    # Disabled: Ruff checks this more comprehensively.
    "duplicate-code",

    # ⚠️  DO NOT DISABLE WITHOUT STRONG JUSTIFICATION:
    # These indicate real design issues. Use inline ignores instead.
    # "too-many-arguments",
    # "too-many-locals",
    # "too-many-statements",
    # "too-many-branches",
    # "too-few-public-methods",
]

[tool.pylint.variables]
ignored-argument-names = "_.*|^dummy_.*|^test_.*"

[tool.pylint.design]
max-attributes = 10
max-locals = 20

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--tb=short -v"
minversion = "7.0"
markers = [
    "unit: mark test as a unit test",
    "edge: mark test as an edge case test",
    "integration: mark test as an integration test",
]

[tool.coverage.run]
source = ["algo", "utils", "loaders", "lambda", "dashboard"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
precision = 2
skip_covered = false
skip_empty = true
sort = "cover"

[tool.coverage.html]
directory = "htmlcov"
