[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo"
version = "0.1.0"
description = "Stock Analytics Platform"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary==2.9.9",
    "yfinance==1.4.1",
    "requests==2.33.0",
    "pandas==2.1.4",
    "scipy==1.13.0",
    "boto3==1.34.0",
    "Flask==3.1.3",
    "Flask-CORS==6.0.0",
    "Werkzeug==3.1.6",
    "urllib3==2.7.0",
    "xlrd==2.0.1",
    "openpyxl==3.1.0",
    "rich==13.9.4",
]

[tool.setuptools]
packages = [
    "algo",
    "utils",
    "lambda",
    "migrations",
    "loaders",
    "monitoring",
    "dashboard",
    "config",
]

[tool.setuptools.package-data]
algo = ["*.py"]
utils = ["*.py"]
loaders = ["*.py"]
monitoring = ["*.py"]
migrations = ["*.py", "versions/*.py"]
dashboard = ["*.py", "**/*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
disallow_untyped_decorators = true
exclude = [
    "^migrations/",
    "^tests/",
]

[[tool.mypy.overrides]]
module = "dashboard.panels.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "package.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "utils.infrastructure.timeout"
disable_error_code = ["unused-ignore"]

[[tool.mypy.overrides]]
module = "loaders.load_prices"
disable_error_code = ["unused-ignore"]

[[tool.mypy.overrides]]
module = "utils.decorators"
disable_error_code = ["unused-ignore"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "C90", "UP", "B", "C4", "PIE", "T10", "LOG", "RUF", "A"]
ignore = ["E203", "E501", "UP031", "RUF012", "N999"]

[tool.ruff.lint.per-file-ignores]
# Per-file ignores MUST be specific (no wildcards).
# F401 (unused import) is NEVER allowed — use if TYPE_CHECKING blocks instead.
# E402 (imports not at top) only allowed in scripts that require setup before imports.
# C901 (complexity) should use inline # noqa — never file-wide.

"__init__.py" = ["F401"]  # Legitimate: __init__ may re-export unused imports for public API
"utils/exceptions/core.py" = ["N818", "A001"]  # N818: exception naming, A001: argument naming (shadowing builtins)
"utils/exceptions/__init__.py" = ["A001"]  # A001: argument naming
"migrations/versions/*" = ["E402", "F401"]  # Migrations: imports after schema setup
"tests/*" = ["E402", "F401", "S101"]  # Tests: setup code, unused fixtures, assertions
"conftest.py" = ["E402"]  # Pytest config: setup before imports
"dashboard/dashboard.py" = ["E402"]  # Dashboard: sys.path setup before imports
"dashboard/panel_registry.py" = ["E402"]  # Panel registry: sys.path setup before imports
"dashboard/panels/circuit.py" = ["E402"]  # Panels: TYPE_CHECKING conditional imports
"dashboard/panels/economic.py" = ["E402"]  # Panels: TYPE_CHECKING conditional imports
"dashboard/panels/exposure.py" = ["E402"]  # Panels: TYPE_CHECKING conditional imports
"dashboard/panels/health.py" = ["E402"]  # Panels: TYPE_CHECKING conditional imports
"dashboard/panels/market.py" = ["E402"]  # Panels: TYPE_CHECKING conditional imports
"dashboard/panels/mascot.py" = ["E402"]  # Panels: TYPE_CHECKING conditional imports
"dashboard/panels/portfolio.py" = ["E402"]  # Panels: TYPE_CHECKING conditional imports
"dashboard/panels/positions.py" = ["E402"]  # Panels: TYPE_CHECKING conditional imports
"dashboard/panels/sectors.py" = ["E402"]  # Panels: TYPE_CHECKING conditional imports
"dashboard/panels/signals.py" = ["E402"]  # Panels: TYPE_CHECKING conditional imports
"dashboard/panels/trades.py" = ["E402"]  # Panels: TYPE_CHECKING conditional imports
"test_end_to_end.py" = ["E402"]  # Scratch debug script: os.environ setup before imports
"test_full_flow.py" = ["E402"]  # Scratch debug script: print() progress markers before imports
"test_scores_endpoint.py" = ["E402"]  # Scratch debug script: print() progress markers before imports
"test_scores_panel.py" = ["E402"]  # Scratch debug script: print() progress markers before imports
"loaders/load_prices.py" = ["E402", "C901"]  # Loader: setup_imports() before standard imports; complex data loading logic
"loaders/load_buy_sell_daily.py" = ["E402"]  # Loader: setup_imports() before standard imports
"loaders/load_market_health_daily.py" = ["E402"]  # Loader: setup_imports() before standard imports
"loaders/load_signal_quality_scores.py" = ["C901"]  # Loader: legitimately complex signal quality score calculations
"algo/infrastructure/reconciliation.py" = ["C901"]  # Position reconciliation: legitimately complex broker/portfolio logic
"algo/orchestration/database_health_monitor.py" = ["C901"]  # Health monitoring: complex state management
"algo/orchestrator/phase6_exit_execution.py" = ["C901"]  # Exit logic: legitimately complex trade exit decisions
"algo/orchestrator/phase8_entry_execution.py" = ["C901"]  # Entry logic: legitimately complex trade entry decisions
"algo/risk/var.py" = ["C901"]  # Risk analysis: legitimately complex portfolio risk calculations
"algo/signals/signal_momentum.py" = ["C901"]  # Signal generation: legitimately complex momentum scoring
"algo/trading/exit_engine.py" = ["C901"]  # Exit engine: legitimately complex exit condition checking
"algo/trading/position_sizer.py" = ["C901"]  # Position sizing: legitimately complex position sizing logic
"algo/trading/pretrade_checks.py" = ["C901"]  # Pre-trade checks: legitimately complex validation logic
"config/credential_manager.py" = ["C901"]  # Credential management: legitimate complexity in credential handling
"config/credential_validator.py" = ["C901"]  # Credential validation: legitimate complexity in validation logic
"lambda/api/lambda_function.py" = ["C901"]  # Lambda handler: legitimate complexity in request routing
"lambda/algo_orchestrator/lambda_function.py" = ["C901"]  # Orchestrator: legitimate complexity in orchestration logic
"lambda/api/api_dispatch.py" = ["C901"]  # API dispatch: legitimate complexity in routing and request handling
"lambda/api/api_portfolio.py" = ["C901"]  # Portfolio API: legitimate complexity in portfolio data aggregation

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.isort]
known-first-party = ["algo", "utils", "loaders", "lambda", "config", "dashboard", "monitoring"]
known-third-party = ["numpy", "pandas", "scipy", "boto3", "flask", "requests", "psycopg2"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint.messages_control]
enable = [
    "comparison-with-callable",  # Catch dict >= int type mismatches
    "unsupported-binary-operation",  # Catch invalid operations (e.g., dict + int)
    "wrong-import-order",  # Enforce import ordering
]
disable = [
    # Disabled because Ruff handles line-length better with auto-fix capability.
    "line-too-long",
    # Disabled: not required by this project.
    "missing-docstring",
    # Disabled: informational only, not a real error. Prefer code review for design decisions.
    "fixme",
    # Disabled: too noisy. Use inline # pylint: disable=no-member for specific cases.
    "no-member",
    # Disabled: Ruff checks this more comprehensively.
    "duplicate-code",
]

[tool.pylint.variables]
ignored-argument-names = "_.*|^dummy_.*|^test_.*"

[tool.pylint.design]
max-attributes = 10
max-locals = 20

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--tb=short -v"
minversion = "7.0"
markers = [
    "unit: mark test as a unit test",
    "edge: mark test as an edge case test",
    "integration: mark test as an integration test",
]

[tool.coverage.run]
source = ["algo", "utils", "loaders", "lambda", "dashboard"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
precision = 2
skip_covered = false
skip_empty = true
sort = "cover"

[tool.coverage.html]
directory = "htmlcov"
